@@ -1,5 +1,9 @@
 EXTRA_DIST = FAQ x3.conf.example sockcheck.conf.example
 SUBDIRS = @MY_SUBDIRS@
+PY_CFLAGS = @PY_CFLAGS@
+PY_LIBS = @PY_LIBS@
+pythonpath = @pythonpath@
+
 DIST_SUBDIRS = src rx
 
 all: x3
