@@ -18,6 +18,9 @@
  * Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
  */
 
+#ifdef WITH_PYTHON
+#include "Python.h"
+#endif
 #include "log.h"
 #include "modules.h"
 
