@@ -1,6 +1,12 @@
 /***********************************************************************
 X3 ChangeLog
 
+2008-12-06  Alex Schumann  <rubin@afternet.org>
+
+	src/modcmd.c: remove python tests (moved to mod-python.c)
+
+	src/mod-python.c: initial template based on memoserv
+
 2008-11-12  Matthew Beeching  <jobe@mdbnet.co.uk>
 
 	* tools/db.php: Added sample DB parser script
